Desktop Header, scrollbar spacing fix

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,12 @@
     font-family: 'Poppins' , sans-serif;
     font-weight: 400;
     font-size: 16px;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
+  body::-webkit-scrollbar {
+    display: none;
   }
 }
 
